--- a/assessment-finished/index.html
+++ b/assessment-finished/index.html
@@ -40,12 +40,12 @@
   <body>
     <div>
       <label for="customname">主人公の名前を入力:</label>
-      //<label for="customname">Enter custom name:</label>
+      <!-- <label for="customname">Enter custom name:</label> -->
       <input id="customname" type="text" placeholder="">
     </div>
     <div>
-      <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked> //デフォルトでチェックされた状態にしたければcheckedにする
-      //<label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk">
+      <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked> <!--デフォルトでチェックされた状態にしたければcheckedにする -->
+      <!-- <label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk"> -->
       <label for="jp">日本</label><input id="jp" type="radio" name="ukus" value="jp">
     </div>
     <div>
