--- a/assessment-finished/index.html
+++ b/assessment-finished/index.html
@@ -44,9 +44,9 @@
       <input id="customname" type="text" placeholder="">
     </div>
     <div>
-      <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked> <!--デフォルトでチェックされた状態にしたければcheckedにする -->
+      <label for="us">US</label><input id="us" type="radio" name="ukjp" value="us" checked> <!--デフォルトでチェックされた状態にしたければcheckedにする -->
       <!-- <label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk"> -->
-      <label for="jp">日本</label><input id="jp" type="radio" name="ukus" value="jp">
+      <label for="jp">日本</label><input id="jp" type="radio" name="ukjp" value="jp">
     </div>
     <div>
       <button class="randomize">バカ話を表示</button>
